EKS/07-QueryApp/deploy-postgres-query.yaml
apiVersion: v1
kind: Service
metadata:
  name: logistics-query-db
  labels:
    app: query
spec:
  ports:
    - port: 5432
  selector:
    app: query
    tier: database
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: logistics-query-db
  labels:
    app: query
spec:
  selector:
    matchLabels:
      app: query
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: query
        tier: database
    spec:
      containers:
        - image: postgres:latest
          name: postgresdb
          ports:
            - containerPort: 5432
              name: postgres-query
          volumeMounts:
            - name: querydb-persistent-storage
              mountPath: /var/lib/postgresql/query/data
      volumes:
        - name: querydb-persistent-storage
          persistentVolumeClaim:
            claimName: efs-postgres
