EKS/07-QueryApp/deploy-query-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: logistics-query-service
  labels:
    app: logistics
spec:
  ports:
    - port: 9003
      targetPort: 9003
  selector:
    app: query-service
    tier: apis
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: logistics-query-service
  labels:
    app: logistics
spec:
  selector:
    matchLabels:
      app: query-service
      tier: apis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: query-service
        tier: apis
    spec:
      containers:
        - image: amitmahajan/query-service:2.0
          name: query-service
          ports:
            - containerPort: 9003
              name: query-service
